git-annex (6.20160809) UNRELEASED; urgency=medium

  * Windows: Handle shebang in external special remote program.
  * Fix formatting of git-annex-smudge man page, and improve mdwn2man.
    Thanks, Jim Paris.
  * examimekey: Allow being run in a git repo that is not initialized by
    git-annex yet.

 -- Joey Hess <id@joeyh.name>  Mon, 05 Sep 2016 11:51:49 -0400

git-annex (6.20160808) unstable; urgency=medium

  * metadata --json output format has changed, adding a inner json object
    named "fields" which contains only the fields and their values.
    This should be easier to parse than the old format, which mixed up
    metadata fields with other keys in the json object.
    Any consumers of the old format will need to be updated.
  * Added metadata --batch option, which allows getting, setting, deleting,
    and modifying metadata for multiple files/keys.
  * Added --branch option to copy, drop, fsck, get, metadata, mirror, move,
    and whereis commands. This option makes git-annex operate on files that
    are included in a specified branch (or other treeish).
  * git-annex.cabal: Temporarily limit to http-conduit <2.2.0
    since aws 0.14.0 is not compatible with the newer version.
  * git-annex.cabal: Temporarily limit to persistent <2.5
    since esqueleto 2.4.3 is not compatible with the newer version.
  * Removed dependency on json library; all JSON is now handled by aeson.
  * When built with uuid-1.3.12, generate more random UUIDs than before.
    (However, this did not impact git-annex much, so a hard depedency has
    not been added on uuid-1.3.12.)
  * info: When run on a file now includes an indication of whether
    the content is present locally.
  * get, move, copy, mirror: Added --failed switch which retries
    failed copies/moves.
  * Re-enable accumulating transfer failure log files for command-line
    actions (disabled in 5.20150522), and remove the log files after
    successful transfers.
